Add dialog fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="strange_black">#283618</color>
     <color name="bgd_vanilla">#fefae0</color>
     <color name="brown">#bc6c25</color>
+    <color name="light_grey">#7A8089</color>
 
 </resources>
